<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/filter_key_r16by9"
        android:title="@string/filter_title_r16by9"
        android:dialogTitle="@string/filter_title_r16by9"
        android:entries="@array/filter_entries_r16by9"
        android:entryValues="@array/filter_values_r16by9"
        android:defaultValue="@string/filter_default_r16by9"/>

    <ListPreference
        android:key="@string/filter_key_r4by3"
        android:title="@string/filter_title_r4by3"
        android:dialogTitle="@string/filter_title_r4by3"
        android:entries="@array/filter_entries_r4by3"
        android:entryValues="@array/filter_values_r4by3"
        android:defaultValue="@string/filter_default_r4by3"/>
</PreferenceScreen>